# mft-neuromodule-python-flask-hackathon-v2

./: Dockerfile  README.md  app.py  detection_results.txt  pyproject.toml
